# django-cookiecutter

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.name }}/: .gitignore  docker-compose.production.yml  docker-compose.yml
{{ cookiecutter.name }}/backend/: Dockerfile  Pipfile  entrypoint.sh  pyproject.toml
{{ cookiecutter.name }}/backend/app/: celery.py  settings.py  urls.py  wsgi.py
{{ cookiecutter.name }}/backend/common/: exceptions_handler.py
{{ cookiecutter.name }}/backend/users/migrations/: 0001_initial.py
{{ cookiecutter.name }}/nginx/: Dockerfile  entrypoint.sh  nginx.conf.esh
